Fix tooltip overflow

--- a/src/resources/postcss/components/_tooltip.pcss
+++ b/src/resources/postcss/components/_tooltip.pcss
@@ -29,6 +29,7 @@
 
 		.tooltipster-content {
 			color: var(--color-text-primary);
+			overflow: inherit;
 			padding: 0;
 		}
 	}
